Add new siderbar tab style and jQuery and google friends connect

--- a/sirenappengine/jieblog/templates/comment.html
+++ b/sirenappengine/jieblog/templates/comment.html
@@ -3,7 +3,7 @@
 {% block contents %}
 
 	{% include 'header.html' %}
-	{% include 'sider_bar.html' %}
+	{% include 'sider_bar_page.html' %}
 	<div id="main_bar">
 	{% include 'post.html' %}
 
