--- a/sirenappengine/jieblog/templates/base.html
+++ b/sirenappengine/jieblog/templates/base.html
@@ -19,6 +19,13 @@ document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.
 var pageTracker = _gat._getTracker("UA-4170083-4");
 pageTracker._trackPageview();
 </script>
+
+
+<script type="text/javascript" src="/scripts/jquery-1.2.6.js"></script>
+<link href="/stylesheets/tab.css" type="text/css" rel="stylesheet" media="screen" />
+<script type="text/javascript" src="/scripts/jquery.idTabs.min.js"></script>
+
+
 		{% block title %}{% endblock %}
 	</head>
 	
