--- a/sirenappengine/jieblog/templates/tag.html
+++ b/sirenappengine/jieblog/templates/tag.html
@@ -5,10 +5,11 @@
 	{% include 'header.html' %}
 	
 	{% include 'sider_bar.html'%}
-	
+	<div id="main_bar">
 	{% for post in tag_posts %}
 		{% include 'post.html' %}
 	{% endfor %}
+	</div>
 	{% include 'bottom.html' %}
 
 
