--- a/sirenappengine/jieblog/templates/base.html
+++ b/sirenappengine/jieblog/templates/base.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>JIEblog System</title>
 		<link type="text/css" rel="stylesheet" href="/stylesheets/style.css" />
-		<link href="/images/favicon.ico" rel="shortcut icon" type="image/x-icon">
+		<link href="/images/favicon.ico" rel="shortcut icon" type="image/x-icon" />
 		<link rel="alternate" type="application/rss+xml" title="JIEblog - RSS" href="http://jieblog.appspot.com/feeds/" />
 		<link href="/stylesheets/prettify.css" type="text/css" rel="stylesheet" />
 		<link rel="wlwmanifest" type="application/wlwmanifest+xml" href="/stylesheets/wlwmanifest.xml" />
@@ -24,8 +24,7 @@ pageTracker._trackPageview();
 <script type="text/javascript" src="/scripts/jquery-1.2.6.js"></script>
 <link href="/stylesheets/tab.css" type="text/css" rel="stylesheet" media="screen" />
 <script type="text/javascript" src="/scripts/jquery.idTabs.min.js"></script>
-
-
+<script type="text/javascript" src="/scripts/siderbar-button.js"></script>
 		{% block title %}{% endblock %}
 	</head>
 	
