--- a/sirenappengine/stylesheets/prettify.css
+++ b/sirenappengine/stylesheets/prettify.css
@@ -1,29 +1,33 @@
-﻿.str{color:#080}
-.kwd{color:#008}
-.com{color:#800}
-.typ{color:#606}
-.lit{color:#066}
-.pun{color:#660}
-.pln{color:#000}
-.tag{color:#008}
-.atn{color:#606}
-.atv{color:#080}
-.dec{color:#606}
+/* Pretty printing styles. Used with prettify.js. */
+
+.str { color: #080; }
+.kwd { color: #008; }
+.com { color: #800; }
+.typ { color: #606; }
+.lit { color: #066; }
+.pun { color: #660; }
+.pln { color: #000; }
+.tag { color: #008; }
+.atn { color: #606; }
+.atv { color: #080; }
+.dec { color: #606; }
+
+@media print {
+  .str { color: #060; }
+  .kwd { color: #006; font-weight: bold; }
+  .com { color: #600; font-style: italic; }
+  .typ { color: #404; font-weight: bold; }
+  .lit { color: #044; }
+  .pun { color: #440; }
+  .pln { color: #000; }
+  .tag { color: #006; font-weight: bold; }
+  .atn { color: #404; }
+  .atv { color: #060; }
+}
 
 pre.prettyprint{ 
-					padding:5px;
-					border-left:3px solid #7755aa;
-					margin: 10px;
-				}
-@media print{
-.str{color:#060}
-.kwd{color:#006;font-weight:bold}
-.com{color:#600;font-style:italic}
-.typ{color:#404;font-weight:bold}
-.lit{color:#044}
-.pun{color:#440}
-.pln{color:#000}
-.tag{color:#006;font-weight:bold}
-.atn{color:#404}
-.atv{color:#060}
+  padding:5px;
+  background-color:#ffecc7;
+  margin: 10px;
+  font-family:  Consolas, "Courier New", "Lucida Grande", Tahoma, Verdana;
 }
