--- a/sirenappengine/stylesheets/TextStyle.css
+++ b/sirenappengine/stylesheets/TextStyle.css
@@ -76,6 +76,11 @@ b {
 	margin-top: 5px;
 	color: #999;
 	font-style: italic;
+	font-family: Georgia, "Lucida Grande",Tahoma, Verdana, arial, sans-serif, hei;
+}
+#copyright,#license {
+	font-family: Georgia, "Lucida Grande",Tahoma, Verdana, arial, sans-serif, hei;
+	color: #66cc00;
 }
 a:link { text-decoration: none; color : #0083e3; border: 0px;}
 a:active { text-decoration: underline; color : #0083e3; border: 0px;}
@@ -261,3 +266,4 @@ blockquote {
 .tag-link {
 	padding:1px;
 }
+
